--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
+# macOS system files
 .DS_Store
+
+# Node modules
 /node_modules/
 
-# React Router
-/.react-router/
-/build/
+# Build output
+/dist
+/build
+
+# Vite cache
+/.vite
+
+# Local environment variables
+.env
+.env.*
+!.env.example   # allow example file for sharing safe defaults
+
+# Appwrite config (optional - if you use SDK keys locally)
+/appwrite.json
+
+# IDE configs
+.idea/
+.vscode/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# React Router (custom paths)
+.react-router/
+
+# Coverage reports
+/coverage
+
+# OS-specific
+Thumbs.db
